--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -9,6 +9,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@coreui/coreui/dist/css/coreui.min.css"
+    />
   </head>
   <body>
     <div id="root"></div>
